front-end/src/index.css
/* body {
  margin: 50px 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
} */

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* .game {
  text-align: center;
} */

#board table {
  position: absolute;
  left: 470px;
  margin: 0 auto;
}
#board tr {
  align-content: center;
}

 #board td {
  border: 1px solid black;
  padding:0;
  margin:0;
  width: 32px;
  height: 31px;
  /* align-self: center; */
  vertical-align: bottom;
  border-radius: 10%;
  background-color: darkgreen;
  line-height: 0;
}

#leftBar {
  position: absolute;
  left: 267px;
  width: 200px;
  height: 520px;
  background-color: lightskyblue;
}

#gamesList {
  height: 150px;
}

#gameListNav {
  text-align: center;
}

#rightBar {
  position: absolute;
  left: 1015px;
  width: 200px;
  height: 520px;
  background-color: lightskyblue;
}

#wordsPlayedNav {
  text-align: center;
}

#wordsPlayed {
  height: 350px;
  text-align: start;
}

#scoreBar {
  height: 150px;
}
#scoreBarNav{
  text-align: center;
}

#bagNav{
  text-align: center;
}

#functionBar {
  text-align: center;
  position: absolute;
  top: 610px;
  left: 620px;
}

#functionBar table {
  margin: 0 auto;
  background-color: white;
  border-spacing: 10px;
}

#functionBar th, #functionBar td {
  width: 32px;
  height: 31px;
  text-align: center;
  border-radius: 10%;
  line-height: 0;
}

#functionBar button {
  margin: 5px;
  background-color: lightpink;
  border-radius: 25%;
  text-align: center;
  width: 50px;
  height: 30px;
}

#tile {
  width: 31px;
  height: 30px;
  border-radius: 10%;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
}

